# forgit

./: README.md  README.rst  pyproject.toml
forgit/: forgit.py  forgit_arg_parser.py  git_manager.py  main.py  types.py  utils.py
tests/: test_forgit.py
